# markapp

./: Makefile  README.md  pyproject.toml  setup.py
src/markapp/: cli.py  markapp.py  watcher.py
tests/: sample-3.md  sample-append.md  sample.md  test_markapp.py
