[tool.poetry]
name = "markapp"
version = "0.3.1"
description = ""
authors = ["Scott Pierce <ddrscott@gmail.com>"]
readme = "README.md"
packages = [{include = "markapp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"
watchdog = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
markapp = "markapp.cli:cli"
